--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^4.0.0
-  intl: ^0.15.8
-  http: ^0.12.0+2
+  provider: ^6.0.2
+  intl: ^0.17.0
+  http: ^0.13.4
   shared_preferences: ^2.0.12
 #  flutter_launcher_icons: ^0.9.2
 #  rename: ^2.0.1
